--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^5.6.4",
+    "@jackwilsdon/craco-use-babelrc": "^1.0.0",
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^11.0.0",
     "@testing-library/user-event": "^11.1.0",
@@ -11,6 +12,7 @@
     "craco-less": "^1.17.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-masonry-component": "^6.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
@@ -34,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "babel-loader": "8.1.0"
   }
 }
