redone in next + mdx + antd

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,11 @@
 {
-    "presets": [
-        [
-        "@babel/env",
-        {
-            "corejs": 2,
-            "useBuiltIns": "usage"
-        }
-        ],
-        "@babel/preset-react"
-    ],
-    "plugins": ["macros"]
+  "presets": ["next/babel"],
+  "plugins": [
+    [
+      "import", {
+        "libraryName": "antd",
+        "style": true
+      },
+    ]
+  ]
 }
