--- a/package.json
+++ b/package.json
@@ -1,44 +1,26 @@
 {
-  "name": "create-react-app-antd",
+  "name": "v3",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@craco/craco": "^5.6.4",
-    "@jackwilsdon/craco-use-babelrc": "^1.0.0",
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^11.0.0",
-    "@testing-library/user-event": "^11.1.0",
-    "antd": "^4.5.2",
-    "craco-less": "^1.17.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
-    "react-masonry-component": "^6.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
-  },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.0.4",
+    "antd": "^4.9.4",
+    "babel-plugin-import": "^1.13.3",
+    "less": "3.13.1",
+    "less-vars-to-js": "^1.3.0",
+    "next": "10.0.4",
+    "next-compose-plugins": "^2.2.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-masonry-component": "^6.2.1"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^1.6.22",
-    "babel-loader": "8.1.0"
+    "@zeit/next-less": "^1.0.1"
   }
 }
