--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-masonry-component": "^6.2.1"
   },
   "devDependencies": {
-    "@zeit/next-less": "^1.0.1"
+    "@zeit/next-less": "^1.0.1",
+    "null-loader": "^4.0.1"
   }
 }
