--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less-vars-to-js": "^1.3.0",
     "next": "10.0.4",
     "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-masonry-component": "^6.2.1"
