--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-import": "^1.13.3",
     "less": "3.13.1",
     "less-vars-to-js": "^1.3.0",
+    "moment": "^2.29.1",
     "next": "10.0.4",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
