--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "moment": "^2.29.1",
     "next": "10.0.4",
     "next-compose-plugins": "^2.2.1",
-    "next-optimized-images": "^2.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-masonry-component": "^6.2.1"
+    "react-masonry-component": "^6.2.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@zeit/next-less": "^1.0.1",
