--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-compose-plugins": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-highlight-words": "^0.16.0",
     "react-masonry-component": "^6.2.1",
     "styled-components": "^5.2.1"
   },
