--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "moment": "^2.29.1",
     "next": "10.0.4",
     "next-compose-plugins": "^2.2.1",
+    "prism-react-renderer": "^1.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-highlight-words": "^0.16.0",
+    "react-live": "^2.2.3",
     "react-masonry-component": "^6.2.1",
     "styled-components": "^5.2.1"
   },
