--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.4",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "antd": "^4.9.4",
     "babel-plugin-import": "^1.13.3",
-    "less": "3.13.1",
-    "less-vars-to-js": "^1.3.0",
+    "less": "^4.1.1",
     "moment": "^2.29.1",
     "next": "10.0.4",
     "next-compose-plugins": "^2.2.1",
@@ -24,9 +25,5 @@
     "react-live": "^2.2.3",
     "react-masonry-component": "^6.2.1",
     "styled-components": "^5.2.1"
-  },
-  "devDependencies": {
-    "@zeit/next-less": "^1.0.1",
-    "null-loader": "^4.0.1"
   }
 }
