--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.4",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.9.4",
     "babel-plugin-import": "^1.13.3",
