--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.9.4",
     "babel-plugin-import": "^1.13.3",
+    "fathom-client": "^3.0.0",
     "less": "^4.1.1",
     "moment": "^2.29.1",
     "next": "10.0.4",
