--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.9.4",
     "babel-plugin-import": "^1.13.3",
+    "dayjs": "^1.10.5",
     "fathom-client": "^3.0.0",
     "less": "^4.1.1",
-    "moment": "^2.29.1",
     "next": "10.0.4",
     "next-compose-plugins": "^2.2.1",
     "prism-react-renderer": "^1.1.1",
