--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "babel-plugin-import": "^1.13.3",
     "dayjs": "^1.10.5",
     "fathom-client": "^3.0.0",
+    "imagemin-mozjpeg": "9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "9.0.0",
     "less": "^4.1.1",
     "next": "10.0.4",
     "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "prism-react-renderer": "^1.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
