--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.4",
+    "@prisma/client": "^4.0.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -25,6 +26,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "prism-react-renderer": "^1.1.1",
+    "prisma": "^4.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-highlight-words": "^0.16.0",
