--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.9.4",
+    "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-plugin-import": "^1.13.3",
     "dayjs": "^1.10.5",
     "fathom-client": "^3.0.0",
@@ -33,5 +34,10 @@
     "react-live": "^2.2.3",
     "react-masonry-component": "^6.2.1",
     "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "typescript": "^4.7.4"
   }
 }
