--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-highlight-words": "^0.16.0",
     "react-live": "^2.2.3",
     "react-masonry-component": "^6.2.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "swr": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
