--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.13.2",
     "@ant-design/icons": "^4.8.0",
+    "@vercel/analytics": "^1.0.1",
     "antd": "^5.0.0",
     "next": "latest",
     "react": "18.2.0",
