--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.13.2",
     "@ant-design/icons": "^4.8.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.12",
     "@vercel/analytics": "^1.0.1",
     "antd": "^5.0.0",
     "next": "latest",
