--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.12",
+    "@prisma/client": "^5.0.0",
     "@vercel/analytics": "^1.0.1",
     "antd": "^5.0.0",
     "next": "latest",
+    "prisma": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.20.0",
