--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "postinstall": "prisma generate",
     "start": "next start"
   },
   "dependencies": {
