--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@prisma/client": "^5.0.0",
     "@vercel/analytics": "^1.0.1",
     "antd": "^5.0.0",
-    "next": "latest",
+    "next": "13.3.4",
     "prisma": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
